--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -78,3 +78,18 @@
   opacity: 1;
   transform: translateY(0);
 }
+
+/* Custom Scrollbar */
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-track {
+  background: hsl(var(--secondary));
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: hsl(var(--primary));
+  border-radius: 20px;
+  border: 3px solid hsl(var(--secondary));
+}
