--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,9 +4,9 @@
 
 @layer base {
   :root {
-    --background: 0 0% 100%;
+    --background: 240 10% 97%; /* Light grey */
     --foreground: 222.2 84% 4.9%;
-    --card: 0 0% 100%;
+    --card: 240 10% 99%;
     --card-foreground: 222.2 84% 4.9%;
     --popover: 0 0% 100%;
     --popover-foreground: 222.2 84% 4.9%;
@@ -20,7 +20,7 @@
     --accent-foreground: 222.2 47.4% 11.2%;
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 210 40% 98%;
-    --border: 214.3 31.8% 91.4%;
+    --border: 263.4 95.3% 78.2%; /* Lighter Purple Border */
     --input: 214.3 31.8% 91.4%;
     --ring: 263.4 95.3% 58.2%;
     --radius: 0.8rem;
@@ -92,4 +92,8 @@
   background-color: hsl(var(--primary));
   border-radius: 20px;
   border: 3px solid hsl(var(--secondary));
+}
+
+.light .bg-alt {
+    background-color: hsl(56, 89%, 96%);
 }
